--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,25 +1,28 @@
 <ion-header>
     <ion-navbar>
       <button ion-button menuToggle>
-        <ion-icon name="menu"></ion-icon>
+        <ion-icon name="menu" style ="background-color: transparent;"></ion-icon>
       </button>
       <ion-title> Login </ion-title>
     </ion-navbar>
 </ion-header>
-  
-<ion-content padding>
-  <h3> Entrar Com Sua Conta </h3> 
-  <p color = 'red' > {{this.newerror}} </p>
-  <div class="list">
-    <label class="item item-input">
-      <input type="text" placeholder="Login"  #login>
-    </label>
-    <label class="item item-input">
-      <input type= {{this.estado}} placeholder="insira a senha" #senha>
-    </label>
-      <button style = "width: 70px; height: 30px;" (click)="logIn(login.value, senha.value)" type="submit">
-        Logon
-      </button>
-    </div>
-    <button class="button button-small" (click)="mostraSenha();">Mostrar Senha</button>
-</ion-content>
+
+<ion-content fullscreen="true" padding style='background-image:url(./assets/imgs/login.png);background-repeat: no-repeat; margin-top: 35px;'>
+    <ion-item style = "background-color: transparent; margin-top: 150px;">
+        <ion-label floating>E-mail</ion-label>
+        <ion-input #login></ion-input>
+    </ion-item>
+    <ion-item style = "background-color: transparent;">
+        <ion-label floating>Senha</ion-label>
+        <ion-input style="witdh: 150px;"></ion-input>
+        <ion-icon name="eye-off" style='margin-left: 185px;'></ion-icon>
+    </ion-item>
+    <button outline block ion-button style = "width: 70px; position: relative;" (click)="logIn(login.value, senha.value)" type="submit">
+        Entrar
+    </button>
+    <button outline block ion-button style = "width: 140px; color: black; position: relative;" (click)="mostraSenha();">Mostrar Senha</button>
+
+    <button outline block ion-button style = "align-content:center; position: relative;" (click)="logIn(login.value, senha.value)" type="submit">
+        Não tem uma conta? Clique Aqui!
+    </button>
+  </ion-content>
