--- a/src/pages/cadastro/cadastro.html
+++ b/src/pages/cadastro/cadastro.html
@@ -6,8 +6,8 @@
       <ion-title> Cadastro </ion-title>
     </ion-navbar>
 </ion-header>
-  
-<ion-content padding>
+
+<ion-content padding style='background-color: #DCFFFB;'>
   <div class="list">
     <ion-item>
     <label class="item item-input">
@@ -24,7 +24,7 @@
         <label class="item item-input">
           <input type= {{this.estado}} placeholder="repita a senha" #senha2>
         </label>
-    </ion-item>    
+    </ion-item>
     <p style = "color: #691320;"> {{this.erro}} </p>
     <ion-item>
       <button class="button button-small" (click)="cadastro(login.value, senha1.value, senha2.value)" type="submit">
