--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <ion-content fullscreen="true" padding style='background-color: #DCFFFB;'>
   <ion-img width =100 height = 150 style = "background-color: #DCFFFB;
 
@@ -19,11 +18,10 @@
     </ion-item>
     <ion-content style = "align-content: center; background-color: transparent;">
       <button solid block ion-button style = " width: 250px;" (click)="logIn(login.value, senha.value)" type="submit">Entrar</button>
-      <button outline block ion-button style = "width: 250px;" (click)="logIn(value = 'cadastro')" type="submit">
+      <button outline block ion-button style = "width: 250px;" (click)="cad()" type="submit">
           Não tem uma conta? Clique Aqui!
       </button>
       </ion-content>
-=======
 <ion-header>
     <ion-navbar>
       <button ion-button menuToggle>
@@ -51,5 +49,4 @@
     <button outline block ion-button style = "align-content:center; position: relative;" (click)="logIn(login.value, senha.value)" type="submit">
         Não tem uma conta? Clique Aqui!
     </button>
->>>>>>> 44ebf2a17d77a7e7f76fb974261a3fe0ef8f8f2b
   </ion-content>
