--- a/src/pages/inicio/inicio.html
+++ b/src/pages/inicio/inicio.html
@@ -1,12 +1,19 @@
-<ion-content fullscreen="true" id='bg' style='background-color: #DCFFFB;'>
-      <ion-img width =100 height = 150 style = "background-color: #DCFFFB;
+<ion-content id='bg' style='background-color: #DCFFFB;'>
+    <ion-img width =100 height = 150 style = "background-color: #DCFFFB;
         height: 70vh;
         width: auto;
         margin: auto;
         display: block;"
-        [src]="this.src"></ion-img>
-    <div>
-        <button outline block ion-button color="#FFFFFF" (click)="onLogin($event, item)" style="align-content:center; margin-top: 360px"> Entrar na sua conta </button>
-    </div>
-
+        [src]="this.src">
+    </ion-img>
+    <!-- <div>
+        <h1>Bem vindo ao <span class="bymoto-title">By Moto</span></h1>
+        <p>Um aplicativo inovador, que alinha soluções para a mobilidade urbana e às necessidades da população.</p>
+    </div> -->
 </ion-content>
+<ion-footer>
+    <ion-toolbar padding color="primary">
+      <button color="secondary" ion-button block (click)="onLogin($event, item)" round> Login </button>
+      <br/>
+    </ion-toolbar>
+  </ion-footer>
