--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,4 +1,4 @@
-<ion-content fullscreen="true" padding style='background-color: #DCFFFB;'>
+<!-- <ion-content fullscreen="true" padding style='background-color: #DCFFFB;'>
   <ion-img width =100 height = 150 style = "background-color: #DCFFFB;
 
                                             height: 70vh;
@@ -13,7 +13,7 @@
     </ion-item>
     <ion-item small style = "background-color: transparent;">
         <ion-label floating>Senha</ion-label>
-        <ion-input style="witdh: 150px;" #senha></ion-input>
+        <ion-input style="width: 150px;" #senha></ion-input>
         <ion-icon name="eye-off" style='margin-left: 185px;'></ion-icon>
     </ion-item>
     <ion-content style = "align-content: center; background-color: transparent;">
@@ -29,24 +29,47 @@
       </button>
       <ion-title> Login </ion-title>
     </ion-navbar>
-</ion-header>
+</ion-header> -->
 
-<ion-content fullscreen="true" padding style='background-image:url(./assets/imgs/login.png);background-repeat: no-repeat; margin-top: 35px;'>
-    <ion-item style = "background-color: transparent; margin-top: 150px;">
-        <ion-label floating>E-mail</ion-label>
-        <ion-input #login></ion-input>
-    </ion-item>
-    <ion-item style = "background-color: transparent;">
-        <ion-label floating>Senha</ion-label>
-        <ion-input style="witdh: 150px;"></ion-input>
-        <ion-icon name="eye-off" style='margin-left: 185px;'></ion-icon>
-    </ion-item>
-    <button outline block ion-button style = "width: 70px; position: relative;" (click)="logIn(login.value, senha.value)" type="submit">
-        Entrar
-    </button>
-    <button outline block ion-button style = "width: 140px; color: black; position: relative;" (click)="mostraSenha();">Mostrar Senha</button>
-
-    <button outline block ion-button style = "align-content:center; position: relative;" (click)="logIn(login.value, senha.value)" type="submit">
-        Não tem uma conta? Clique Aqui!
-    </button>
-  </ion-content>
+<ion-header>
+    <ion-navbar color="primary">
+      <ion-title>Login</ion-title>
+    </ion-navbar>
+  </ion-header>
+  <ion-content>
+    <ion-grid no-padding>
+      <ion-row align-items-end justify-content-left>
+        <ion-col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12>
+          <!-- <form #ngForm="ngForm" on-ngSubmit="toLogin(item)" novalidate text-center> -->
+            <img style="margin: auto; display: block; width: 120px; height: auto;" src="../../assets/imgs/novalogo.png" id="logo" alt="Tech Signal" title="Tech Signal"><img>
+            <ion-list>
+              <ion-item class="animated slideInLeft faster">
+                <!-- <ion-icon item-start name="lock-closed" color="danger"></ion-icon> -->
+                <ion-label floating for="email">E-mail</ion-label>
+                <ion-input #login></ion-input>
+              </ion-item>
+              <ion-item class="animated slideInLeft fast">
+                <ion-label floating for="password">Senha</ion-label>
+                <ion-input #senha></ion-input>
+                <button color="light-primary" ion-button clear item-right tappable type="button">
+                <ion-icon color="light-primary"></ion-icon>
+                </button>
+              </ion-item>
+            </ion-list>
+            <div padding>
+              <button tappable (click)="logIn(login.value, senha.value)" type="submit" block ion-button round>Entrar</button>
+            </div>
+          <!-- </form> -->
+          <div padding>
+            <button color="secondary" clear block ion-button tappable on-click="openModal('account-recovery')" round>Esqueci minha senha</button>
+          </div>
+          <hr/>
+          <div padding>
+            <button color="secondary" outline block ion-button tappable (click)="cad()" round>Não tem uma conta? Clique Aqui!</button>
+          </div>
+          
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-content> 
+  
