--- a/src/pages/inicio/inicio.html
+++ b/src/pages/inicio/inicio.html
@@ -1,13 +1,12 @@
-<ion-content id='bg' style='background-color: #DCFFFB;'>
-    <ion-img width =100 height = 150 style = "background-color: #DCFFFB;
-        height: 70vh;
-        width: auto;
-        margin: auto;
-        display: block;"
-        [src]="this.src">
-    </ion-img>
-    <!-- <div>
-        <h1>Bem vindo ao <span class="bymoto-title">By Moto</span></h1>
+<ion-content 
+id='bg' style="background: linear-gradient(to bottom, rgba(255,255,255,0.6) 0%,rgba(255,255,255,0.5) 100%), url(./assets/imgs/bg3.png); height: 100%;
+width: 100%;
+background-size: cover;
+background-position: center;">
+
+    <img id="logo" style="margin: auto; display: block; width: 150px; height: auto;" src="../../assets/imgs/novalogo.png"/>
+    <!-- <div id='frase'>
+        <h1>A linguagem do futuro é a <span class="slogan">Empatia</span> e a <span class="slogan">inclusão</span></h1>
         <p>Um aplicativo inovador, que alinha soluções para a mobilidade urbana e às necessidades da população.</p>
     </div> -->
 </ion-content>
