add module.ts files

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -14,5 +14,22 @@
     </ion-navbar>
   </ion-header>
   <ion-label style= "margin-top: 100px;"> {{this.nome}} - {{this.cargo}} </ion-label>
+  <ion-content>
+    <ion-row>
+        <ion-item no-lines style="background-color: transparent;">
+          <ion-scroll inline-block scrollX="true" style="height:40px; background-color: transparent;" scroll-avatar>
+              <ion-avatar  style="background-color: transparent;">
+                <img src="../assets/imgs/4.png" class="scroll-item"/>
+              </ion-avatar>
+            <ion-avatar  style="background-color: transparent;">
+              <img src="../assets/imgs/4.png" class="scroll-item"/>
+            </ion-avatar>
+            <ion-avatar  style="background-color: transparent;">
+              <img src="../assets/imgs/4.png" class="scroll-item"/>
+            </ion-avatar>
+          </ion-scroll>
+        </ion-item>
+      </ion-row>
+    </ion-content>
 </ion-content>
 
