--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -41,7 +41,7 @@
       <ion-row align-items-end justify-content-left>
         <ion-col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12>
           <!-- <form #ngForm="ngForm" on-ngSubmit="toLogin(item)" novalidate text-center> -->
-            <img style="margin: auto; display: block; width: 120px; height: auto;" src="../../assets/imgs/novalogo.png" id="logo" alt="Tech Signal" title="Tech Signal"><img>
+            <img style="margin: auto; display: block; width: 120px; height: auto; padding-top: 5%;" src="../../assets/imgs/novalogo.png" id="logo" alt="Tech Signal" title="Tech Signal"><img>
             <ion-list>
               <ion-item class="animated slideInLeft faster">
                 <!-- <ion-icon item-start name="lock-closed" color="danger"></ion-icon> -->
