--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -9,9 +9,10 @@
 <style>
   .line {
     width: 80%;
-    border: 4px solid rgb(255, 136, 0);
+    border: 2px solid;
+    //color: rgb({{ this.canalAzul }}, {{ this.canalAzul }}, 0);
   }
-</style>
+</style> 
 <ion-header>
   <ion-navbar hideBackButton>
     <button (click)="openMenu()">
@@ -21,8 +22,8 @@
   </ion-navbar>
 </ion-header>
 <div style="overflow-y: scroll; height: 100%;">
-<div class="scrollmenu" style="padding-top: 40px;">
-  <h1>Seus Cursos</h1>
+  <h1  style="padding-top: 40px;">Seus Cursos</h1>
+<div class="scrollmenu">
   <a (click)="cad()">
     <ion-card class="card">
       <ion-card-header>
@@ -33,7 +34,8 @@
       <ion-card-content style="white-space: normal;">
         Neste curso, você encontrará os materiais de apoio para o
         aprendizado do curso de Mecânica Industrial pelo Instituto Federal
-        da Bahia. Acesso Gratuito.
+        da Bahia.
+        <ion-badge item-end>Gratuito</ion-badge>
       </ion-card-content>
     </ion-card>
   </a>
@@ -47,7 +49,10 @@
       <ion-card-content style="white-space: normal;">
         Neste curso, você encontrará os materiais de apoio para o
         aprendizado do curso de Automação Industrial pelo Instituto Federal
-        da Bahia. Acesso Gratuito.
+        da Bahia.
+        <div style="align-items: right; align-content: right;">
+          <ion-badge item-end>Gratuito</ion-badge>
+        </div>  
       </ion-card-content>
     </ion-card>
   </a>
@@ -61,7 +66,8 @@
       <ion-card-content style="white-space: normal;">
         Neste curso, você encontrará os materiais de apoio para o
         aprendizado do curso de Química Industrial pelo Instituto Federal
-        da Bahia. Acesso Gratuito.
+        da Bahia. 
+        <ion-badge item-end>Gratuito</ion-badge>
       </ion-card-content>
     </ion-card>
   </a>
@@ -78,7 +84,8 @@
       <ion-card-content style="white-space: normal;">
         Neste curso, você encontrará os materiais de apoio para o
         aprendizado do curso de Mecânica Industrial pelo Instituto Federal
-        da Bahia. Acesso Gratuito.
+        da Bahia. 
+        <ion-badge item-end color="dark">Premium</ion-badge>
       </ion-card-content>
     </ion-card>
   </a>
