--- a/src/pages/sobre/sobre.html
+++ b/src/pages/sobre/sobre.html
@@ -5,11 +5,11 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-  <ion-navbar hideBackButton>
-    <button (click)="openMenu()">
+  <ion-navbar color="primary" hideBackButton>
+    <button style="background-color:#303F9F;" (click)="openMenu()">
       <ion-icon name="menu" md="md-menu" style="zoom:2.0; display: inline -block;"></ion-icon>
     </button>
-    <ion-title style="text-align: center; display: inline-block;"> Sobre a Tech Signal </ion-title>
+    <ion-title> Sobre a Tech Signal </ion-title>
   </ion-navbar>
 </ion-header>
 
