Adiciona pagina 'Minha Conta'

--- a/src/pages/meuscursos/meuscursos.html
+++ b/src/pages/meuscursos/meuscursos.html
@@ -24,7 +24,7 @@
     <a (click)="cad()">
       <ion-card class="card">
         <ion-card-header>
-          <img class="card" src="../../assets/imgs/mecanica.jpg"><img>
+          <img class="card" src="../../assets/imgs/mecanica.jpg">
           <ion-card-title>Mecânica Industrial</ion-card-title>
         </ion-card-header>
         <div class="line"></div>
@@ -39,7 +39,7 @@
     <a (click)="cad()">
       <ion-card class="card">
         <ion-card-header>
-          <img class="card" src="../../assets/imgs/mecanica.jpg"><img>
+          <img class="card" src="../../assets/imgs/mecanica.jpg">
           <ion-card-title>Mecânica Industrial</ion-card-title>
         </ion-card-header>
         <div class="line"></div>
@@ -54,7 +54,7 @@
     <a (click)="cad()">
       <ion-card class="card">
         <ion-card-header>
-          <img class="card" src="../../assets/imgs/mecanica.jpg"><img>
+          <img class="card" src="../../assets/imgs/mecanica.jpg">
           <ion-card-title>Mecânica Industrial</ion-card-title>
         </ion-card-header>
         <div class="line"></div>
