--- a/src/pages/sobre/sobre.html
+++ b/src/pages/sobre/sobre.html
@@ -103,25 +103,17 @@
     .prev, .next,.text {font-size: 11px}
   }
   </style>
-<ion-header>
-  <ion-navbar hideBackButton>
-    <button (click)="openMenu()">
-      <ion-icon name="menu" md="md-menu" style="zoom:2.0; display: inline -block;"></ion-icon>
-    </button>
-    <ion-title style="text-align: center; display: inline-block;"> Sobre a Tech Signal </ion-title>
-  </ion-navbar>
-</ion-header>
 
 <ion-content>
-  <ion-slides pager="true">
+  <ion-slides page r="true">
     <ion-slide>
-      <img src="../../assets/imgs/1.png"><img>
+      <img src="../../assets/imgs/1.png">
     </ion-slide>
     <ion-slide>
-      <img src="../../assets/imgs/2.png"><img>
+      <img src="../../assets/imgs/2.png">
     </ion-slide>
     <ion-slide>
-      <img src="../../assets/imgs/3.png"><img>
+      <img src="../../assets/imgs/3.png">
     </ion-slide>
   </ion-slides>
     <br>
