--- a/src/pages/conta/conta.html
+++ b/src/pages/conta/conta.html
@@ -5,7 +5,10 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="primary" hideBackButton>
+    <button style="background-color:#303F9F;" (click)="openMenu()">
+      <ion-icon name="menu" md="md-menu" style="zoom:2.0; display: inline-block;"></ion-icon>
+    </button>
     <ion-title>Minha Conta</ion-title>
   </ion-navbar>
 </ion-header>
